@@ -28,7 +28,7 @@
 
 import unittest
 
-from sql import Table
+from sql import Table, With
 
 
 class TestDelete(unittest.TestCase):
@@ -56,4 +56,15 @@ class TestDelete(unittest.TestCase):
     def test_delete_returning(self):
         query = self.table.delete(returning=[self.table.c])
         self.assertEqual(str(query), 'DELETE FROM "t" RETURNING "c"')
+        self.assertEqual(query.params, ())
+
+    def test_with(self):
+        t1 = Table('t1')
+        w = With(query=t1.select(t1.c1))
+
+        query = self.table.delete(with_=[w],
+            where=self.table.c2.in_(w.select(w.c3)))
+        self.assertEqual(str(query),
+            'WITH a AS (SELECT "b"."c1" FROM "t1" AS "b") '
+            'DELETE FROM "t" WHERE ("c2" IN (SELECT "a"."c3" FROM a AS "a"))')
         self.assertEqual(query.params, ())
